// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplesoftDisassembler disassemble should correctly handle REM instructions 1`] = `
[
  {
    "dataBytes": [
      178,
      32,
      69,
      97,
      116,
      32,
      34,
      121,
      111,
      117,
      114,
      34,
      32,
      61,
      32,
      118,
      101,
      103,
      101,
      116,
      97,
      98,
      108,
      101,
      115,
    ],
    "dataString": "REM Eat "your" = vegetables",
    "fullInstruction": "1 REM Eat "your" = vegetables",
    "line": 1,
    "nextInstructionAddress": 2079,
  },
]
`;

exports[`ApplesoftDisassembler disassemble should correctly handle multiple statements 1`] = `
[
  {
    "dataBytes": [
      170,
      88,
      36,
      208,
      34,
      115,
      111,
      109,
      101,
      32,
      118,
      97,
      108,
      117,
      101,
      34,
    ],
    "dataString": "LET X$ = "some value"",
    "fullInstruction": "1 LET X$ = "some value"",
    "line": 1,
    "nextInstructionAddress": 2070,
  },
  {
    "dataBytes": [
      186,
      88,
      36,
    ],
    "dataString": "PRINT X$",
    "fullInstruction": "2 PRINT X$",
    "line": 2,
    "nextInstructionAddress": 2078,
  },
  {
    "dataBytes": [
      170,
      89,
      36,
      208,
      88,
      36,
      200,
      34,
      115,
      111,
      109,
      101,
      32,
      111,
      116,
      104,
      101,
      114,
      32,
      116,
      101,
      115,
      116,
      34,
    ],
    "dataString": "LET Y$ = X$ + "some other test"",
    "fullInstruction": "3 LET Y$ = X$ + "some other test"",
    "line": 3,
    "nextInstructionAddress": 2107,
  },
  {
    "dataBytes": [
      186,
      89,
      36,
    ],
    "dataString": "PRINT Y$",
    "fullInstruction": "4 PRINT Y$",
    "line": 4,
    "nextInstructionAddress": 2115,
  },
  {
    "dataBytes": [
      171,
      49,
    ],
    "dataString": "GOTO 1",
    "fullInstruction": "5 GOTO 1",
    "line": 5,
    "nextInstructionAddress": 2122,
  },
]
`;

exports[`ApplesoftDisassembler disassemble should correctly handle string assignment 1`] = `
[
  {
    "dataBytes": [
      170,
      88,
      36,
      208,
      34,
      115,
      111,
      109,
      101,
      32,
      118,
      97,
      108,
      117,
      101,
      34,
    ],
    "dataString": "LET X$ = "some value"",
    "fullInstruction": "1 LET X$ = "some value"",
    "line": 1,
    "nextInstructionAddress": 2070,
  },
]
`;
